--- a/src/data/grammar/headlines/clickbait.yaml
+++ b/src/data/grammar/headlines/clickbait.yaml
@@ -10,9 +10,7 @@ clickbait:
 - 'PICTURES: #pro#''s [_cosplayAdj:amazing,convincing,elaborate,unconventional]#_cosplayAdj#
   cosplay of [_who:#randomCardAlone#,#character#]#_who#'
 - 'New preview card from #teaserCardSet#! Is it [_desc:#descriptor#,#adjComparative#]#_desc.a# #realPowerfulCard#?'
-- "[_opener:SHOCKER!,Unbelievable!,Rumor#colon#,BREAKING#colon#,It's true#colon#,UPDATE#colon#]#_opener#
-  #pro# [_rule:petitioned,solicited,approached,contacted,called out]#_rule# by #wackyCharacter#
-  to #dumbScenario#"
+- "[_opener:SHOCKER!,Unbelievable!,Rumor#colon#,BREAKING#colon#,It's true#colon#,UPDATE#colon#]#_opener# #pro# [_rule:petitioned,solicited,approached,contacted,called out]#_rule# by #wackyCharacter# to #dumbScenario#"
 - "How #verbSolutionGerund# helped #pro# #verbDesireableOutcomeIntransitive#"
 - "#clickbaitShocker.capitalizeAll#"
 
@@ -20,9 +18,7 @@ clickbaitShocker:
 - "#pro# [_picked:first picked,last picked,wheeled,drafted,topdecked,hate drafted,windmill slammed,morphed]#_picked#
   #randomAnyCard#[_challenge: and you won't believe,. You'll be floored by,. Guess,. Find out,. #peoplePlural.capitalizeAll# #are# still talking about#]#_challenge.capitalize#[_what:what happened next,what #pro# said next,what #pro# did next,why #pro# called a judge] #_what#"
 
-wackyCharacter: "#_wackyCharacter#"
-
-_wackyCharacter:
+wackyCharacter:
 - "#person#"
 - "#miscPersonSingular#"
 - "a future version of #themselves#"
@@ -48,4 +44,4 @@ _wackyCharacter:
 - "a boy with [_lifeBound:#count# months,#count# weeks][_what:#_lifeBound# to live,nothing to lose]#_what#[#malePronouns#]"
 - "a swarm of [_insectAdjective:sentient,psychic,intelligent,enormous][_flyingInsects:gnats,moths,bees,mosquitoes,beetles,hermit crabs]#_insectAdjective# #_flyingInsects#[#theyPronouns#]"
 - "#colorfulLocal#[#somePronoun#]"
-- "[_adj:#mood#,#mood#,#mood#,undercover,smarmy,extremely confused,foolhardy,depraved,shady,crafty,wide-eyed,troubled,deranged,delirious,timid][_what:robot,child,nun,schoolteacher,preacher,gentleman,con man,gigolo,leprechaun,recluse,fortune-teller,#characterClass#]#_adj.a# #_what#[#somePronoun#]"
+- "[_adj:#mood#,#mood#,#mood#,undercover,smarmy,extremely confused,foolhardy,depraved,shady,crafty,wide-eyed,troubled,deranged,delirious,timid][#somePronoun#][_what:robot,child,nun,schoolteacher,preacher,gentleman,con man,gigolo,leprechaun,recluse,fortune-teller,#characterClass#]#_adj.a# #_what#[#somePronoun#]"
