--- a/src/data/grammar/mtg/gameplay/mtg-formats.yaml
+++ b/src/data/grammar/mtg/gameplay/mtg-formats.yaml
@@ -8,12 +8,14 @@
       "Standard",
       "Pauper",
       "Momir",
+      "Brawl",
       "#expansionBlock# Block Constructed",
       "Holiday Cube",
       "Type 4",
       "Two-Headed Giant",
       "Kitchen Table Magic",
       "Team Unified #constructedFormat#",
+      "Canadian #popularFormat#",
       "#alternativeConstructedFormat#",
       "#alternativeDraftFormat#"
   ],
@@ -29,6 +31,7 @@
       "Vintage",
       "Legacy",
       "Commander",
+      "Brawl",
       "Draft",
       "Booster Draft",
       "Sealed",
