--- a/src/data/grammar/vocab/misc-people.yaml
+++ b/src/data/grammar/vocab/misc-people.yaml
@@ -164,3 +164,16 @@ someGuyOrGal:
 - clown
 - loser
 - fool
+
+personPejorative: 
+- weirdo
+- loser
+- idiot
+- cretin
+- jerk
+- joker
+- goofus
+- twit
+- clown
+- genius
+- fool
