--- a/src/data/grammar/headlines/flavor-text.yaml
+++ b/src/data/grammar/headlines/flavor-text.yaml
@@ -51,7 +51,7 @@ flavorText:
   - >
     "No wonder where you find them, #creatureTypes.s# love #pluralNounOrMassNoun#."
   - >
-    "We hold sacred the powers of #abstractNoun# and #abstractNoun#. #abstractNounMassNounOrEmotion.capitalize# and #abstractNounMassNounOrEmotion# are our greatest weapons." —#characterFactionOrRace.capitalize# #motto#
+    "We hold sacred the powers of #abstractNoun# and #abstractNoun#. #abstractNounMassNounOrEmotion.capitalize# and #abstractNounMassNounOrEmotion# are our [_adj:greatest,oldest,only,favorite,#adjSuperlative#][what:weapons,regrets,problems,obessions,sources of confusion]#_adj# #_what#." —#characterFactionOrRace.capitalize# #motto#
   - >
     "#verbTransitive.capitalize# that which was [_never:never,once]#_never# #verbTransitivePastTense#." —#itemNoun.capitalize# #inscription#
   - >
@@ -96,6 +96,10 @@ flavorText:
      "I came looking for [#lookingFor#]#_lookFor1.s# and I find [_place:#placeNoun#,#placeNounCanonical#,#placeNounRealm#]#_place.a# full of #_lookFor2.s#. [_feeling:I love,I hate,I despise,I'm terrified of,I'm not a fan of,I'm amused by,I'm tired of all these,Enough with the,So many,It had to be,What's with the,I'm sick of the,Three cheers for]#_feeling# #_lookFor2.s#." —#characterAttribution#
   - >
     "[_preface:At this rate,If this is any indication,I'm going to assume,With our luck,For all we know]#_preface#", [_said:said,#verbExclaim.ed#,#soundEmanation.ed#]#_said# #character#, "[_who:#creatureTypes#,#characterClass#,#someGuyOrGal#][_see:see,encounter,find,stumble across,meet]the next #_who# we #_see# [_willHave:will have,is going to have,will probably have,will be missing][_aBodyPart:#bodypart.a#,a huge #bodypart#,a tiny #bodypart#,an extra][_whatHave:#_aBodyPart#,#bodypartsPlural#,#count# #bodypartsPlural#,#count# #itemNoun.s#][_willBe:will be,is going to be,is likely to be][_personality:#character#,#anyCharacter#,#miscPersonSingular#,your #personRelational#,a real #someGuyOrGal#][_duration:all day,all night,all week,all the time,until I #verbExclaim#][_really:really,extremely,ridiculously,depressingly,absurdly][_moodOrAdj:#mood#,#adjPersonCharacteristic#,#adj#][_whatBe:#creatureTypeOrCharacterClass.a#,#_personality#,#verbInceptiveTransitiveGerund# us,#verbStrictlyIntransitiveGerund# #_duration#,#_really# #mood#,wearing #clothingOrAccessory.aIfNeeded#][_prediction:#_willHave# #_whatHave#,#_willBe# #_whatBe#]#_prediction#."
+  - >
+    "[_heSheExercises:He exercises,She exercises][_theyExercise:#_heSheExercises#,They exercise#][_descClothes:#adjCorporeal# #clothingOrAccessory#][_clothes:#creatureTypeOrCharacterClass.hyphenate.a#'s #clothingOrAccessory#,#_descClothes.aIfNeeded#,#_descClothes.aIfNeeded#][_what:#creatureTypes#,#creatureTypes#,#animal#][_whatsPart:#_what# #bodypartsInPairs#][_right:the right to][_simpleRight:#_heSheExercises# #_right# #_what.hyphenate.a# #bodypart#,#_theyExercise# #_right# #_what.hyphenate# #bodypartsPlural#][_rightToParts:#_simpleRight#,#_simpleRight#,#_heSheExercises# #_right# #_whatsPart.aIfNeeded#,#_heSheExercises# #_right# #_clothes#]#_rightToParts#."
+  - >
+    "[_who:#personPejorative#,#someGuyOrGal#,#characterClass#,#animal#][_what:#concreteNounOrPluralNoun#][_nextVerb:#verbStrictlyTransitive#,#verbInceptiveTransitive#]The #_who# who #verbInceptiveTransitive.s# the #_what#, #_nextVerb.s# the #_what#."
 
 characterAttribution:
   - "#planeswalkerFullName#"
@@ -132,6 +136,7 @@ sealInscriptionDescriptionWhatIdo:
 - "#verbTransitive.s# the #adj#"
 - "#verbTransitive.s# the #pluralNoun#"
 - "#verbTransitive.s# all #pluralNoun#"
+- "#verbTransitive.s# all the [_what:#pluralItemNounOrMassNoun#,#animalPlural#]#_what#"
 - "#verbTransitive.s# all #abstractNounMassNounOrEmotion#"
 - "#verbTransitive.s# the #massNoun#"
 - "#verbTransitive.s# the final #itemNoun#"
